Sort element's attributes

--- a/src/html/about/index.mustache
+++ b/src/html/about/index.mustache
@@ -17,11 +17,11 @@
   <body>
     {{> global-header}}
 
-    <main role="main">
+    <main class="main" role="main">
       <section id="website">
-        <h1>このウェブサイトについて</h1>
+        <h1 class="section-heading">このウェブサイトについて</h1>
 
-        <footer>
+        <footer class="section-footer">
           <p>Informations, for humans.</p>
         </footer>
 
@@ -34,20 +34,20 @@
         <p>このウェブサイトの更新情報は、以下の2種類のRSSフィードで配信しています。</p>
 
         <ul>
-          <li><a rel="alternate" type="application/rss+xml" href="http://hail2u.net/feed">ウェブサイトの更新情報とウェブログの記事</a></li>
-          <li><a type="application/rss+xml" href="http://hail2u.net/blog/feed">ウェブログの記事のみ</a></li>
+          <li><a href="http://hail2u.net/feed" rel="alternate" type="application/rss+xml">ウェブサイトの更新情報とウェブログの記事</a></li>
+          <li><a href="http://hail2u.net/blog/feed" type="application/rss+xml">ウェブログの記事のみ</a></li>
         </ul>
 
-        <p>他に<a rel="alternate" type="text/html" href="https://twitter.com/hail2unet">Twitter</a>や<a rel="alternate" type="text/html" href="https://www.facebook.com/hail2u.net">Facebookページ</a>、<a rel="alternate" type="text/html" href="http://u2liah.tumblr.com/">Tumblr</a>でも購読することができます。</p>
+        <p>他に<a href="https://twitter.com/hail2unet" rel="alternate" type="text/html">Twitter</a>や<a href="https://www.facebook.com/hail2u.net" rel="alternate" type="text/html">Facebookページ</a>、<a href="http://u2liah.tumblr.com/" rel="alternate" type="text/html">Tumblr</a>でも購読することができます。</p>
 
         <h2>ライセンス</h2>
 
         <figure>
-          <a rel="license" href="{{license_url}}"><img src="/images/about/cc-by-nc.png" alt="Creative Commons — Attribution-NonCommercial"></a>
+          <a href="{{license_url}}" rel="license"><img alt="Creative Commons — Attribution-NonCommercial" src="/images/about/cc-by-nc.png"></a>
           <figcaption>License Everything under a CC BY-NC</figcaption>
         </figure>
 
-        <p>このウェブサイト内の全ての文書とファイル(画像やスタイルシートを含みます)は、そのファイル自体に別のライセンス情報が明記または添付されていない限り<a rel="license" href="{{license_url}}">Creative Commons — Attribution-NonCommercial</a>の元で公開されています。</p>
+        <p>このウェブサイト内の全ての文書とファイル(画像やスタイルシートを含みます)は、そのファイル自体に別のライセンス情報が明記または添付されていない限り<a href="{{license_url}}" rel="license">Creative Commons — Attribution-NonCommercial</a>の元で公開されています。</p>
       </section>
 
       {{> google-adsense__ad-main}}
@@ -56,14 +56,14 @@
         <link href="/about/" itemprop="url">
         <link href="mailto:kyo@hail2u.net" itemprop="email">
 
-        <h1><span itemprop="name">Kyo Nagashima</span>について</h1>
+        <h1 class="section-heading"><span itemprop="name">Kyo Nagashima</span>について</h1>
 
-        <footer>
+        <footer class="section-footer">
           <p>Who.</p>
         </footer>
 
         <figure>
-          <img src="http://www.gravatar.com/avatar/38b5f9f7d2faa315ec10866e18fc3bd7.png?s=320" alt="This Is the End" itemprop="image">
+          <img alt="This Is the End" src="http://www.gravatar.com/avatar/38b5f9f7d2faa315ec10866e18fc3bd7.png?s=320" itemprop="image">
         </figure>
 
         <p><ruby><span itemprop="familyName">長嶋</span><rp>(</rp><rt>ながしま</rt><rp>)</rp><span itemprop="givenName">享</span><rp>(</rp><rt>きょう</rt><rp>)</rp></ruby>と言います。<time datetime="1976-07-23" itemprop="birthDate">1976年7月23日</time>生まれ。<span itemprop="address" itemscope itemtype="http://schema.org/PostalAddress"><span itemprop="addressRegion">神奈川県</span>在住</span>。</p>
@@ -71,21 +71,21 @@
         <p>インターネットでは<em itemprop="additionalName">hail2u</em>または<em itemprop="additionalName">kyo</em>というニックネームで活動していることが多いですが、<em itemprop="additionalName">h2u</em>や<em itemprop="additionalName">hail2u_</em>等でも活動することもあります。</p>
 
         <ul class="flat-ul">
-          <li><a rel="me" href="https://twitter.com/hail2u_">Twitter</a></li>
-          <li><a rel="me" href="https://www.facebook.com/hail2u">Facebook</a></li>
-          <li><a rel="me" href="https://plus.google.com/+KyoNagashima">Google+</a></li>
-          <li><a rel="me" href="https://github.com/hail2u">GitHub</a></li>
-          <li><a rel="me" href="https://pinboard.in/u:hail2u">Pinboard</a></li>
-          <li><a rel="me" href="https://www.readability.com/hail2u/">Readability</a></li>
-          <li><a rel="me" href="http://www.pinterest.com/hail2u/">Pinterest</a></li>
-          <li><a rel="me" href="http://www.last.fm/user/hail2u">Last.fm</a></li>
+          <li><a href="https://twitter.com/hail2u_" rel="me">Twitter</a></li>
+          <li><a href="https://www.facebook.com/hail2u" rel="me">Facebook</a></li>
+          <li><a href="https://plus.google.com/+KyoNagashima" rel="me">Google+</a></li>
+          <li><a href="https://github.com/hail2u" rel="me">GitHub</a></li>
+          <li><a href="https://pinboard.in/u:hail2u" rel="me">Pinboard</a></li>
+          <li><a href="https://www.readability.com/hail2u/" rel="me">Readability</a></li>
+          <li><a href="http://www.pinterest.com/hail2u/" rel="me">Pinterest</a></li>
+          <li><a href="http://www.last.fm/user/hail2u" rel="me">Last.fm</a></li>
         </ul>
       </section>
 
       <section id="colophon">
-        <h1>奥付け</h1>
+        <h1 class="section-heading">奥付け</h1>
 
-        <footer>
+        <footer class="section-footer">
           <p>Tools and technologies used on this website.</p>
         </footer>
 
@@ -134,9 +134,9 @@
       </section>
 
       <section id="contact">
-        <h1>問い合わせ</h1>
+        <h1 class="section-heading">問い合わせ</h1>
 
-        <footer>
+        <footer class="section-footer">
           <p>Yo.</p>
         </footer>
 
