--- a/src/html/blog/index.mustache
+++ b/src/html/blog/index.mustache
@@ -17,11 +17,11 @@
   <body>
     {{> global-header}}
 
-    <main role="main">
+    <main class="main" role="main">
       <section id="by-category">
-        <h1>カテゴリ別</h1>
+        <h1 class="section-heading">カテゴリ別</h1>
 
-        <footer>
+        <footer class="section-footer">
           <p>Organized by categories.</p>
         </footer>
 
@@ -46,9 +46,9 @@
       {{#articles}}
         {{#isFirstInYear}}
           <section id="on-{{year}}" class="post-list">
-            <h1>Articles on {{year}}</h1>
+            <h1 class="section-heading">Articles on {{year}}</h1>
 
-            <footer>
+            <footer class="section-footer">
               <p>What I was thinking on {{year}}.</p>
             </footer>
 
