--- a/src/html/blog/theme.mustache
+++ b/src/html/blog/theme.mustache
@@ -39,9 +39,9 @@
     <meta content="{{site_title}}" property="og:site_name">
     <meta content="100000022521341" prefix="fb: http://ogp.me/ns/fb#" property="fb:admins">
 
-    <meta name="twitter:card" content="$utils::card_type">
-    <meta name="twitter:site" content="@hail2unet">
-    <meta name="twitter:creator" content="@hail2u_">
+    <meta content="$utils::card_type" name="twitter:card">
+    <meta content="@hail2unet" name="twitter:site">
+    <meta content="@hail2u_" name="twitter:creator">
 
     {{> style}}
 
@@ -51,12 +51,12 @@
   <body<?$permalink::is_permalink eq="1"> class="permalink"</?>>
     {{> global-header}}
 
-    <main<?$permalink::is_permalink ne="1"> role="main"</?>>
+    <main class="main" <?$permalink::is_permalink ne="1"> role="main"</?>>
       <?$categories::enabled eq="1">
         <section class="post-list">
-          <h1>Articles under $categories::title</h1>
+          <h1 class="section-heading">Articles under $categories::title</h1>
 
-          <footer>
+          <footer class="section-footer">
             <p>What I wrote about “$categories::title”.</p>
           </footer>
 
@@ -70,9 +70,9 @@
         <?$utils::has_image ne="1"><meta content="{{image}}" itemprop="image"></?>
         <link href="$url$path/$fn.$default_flavour" itemprop="url">
 
-        <h1 itemprop="name">$title</h1>
+        <h1 class="article-heading" itemprop="name">$title</h1>
 
-        <footer>
+        <footer class="article-footer">
           <p>on <time datetime="$yr-$mo_num-$da<?$fn>T</?>$ti<?$fn>:</?>00+09:00" itemprop="datePublished">$mo <@utils.strip_leading_zeros output="Yes">$da</@utils.strip_leading_zeros>, $yr</time>
             under <span class="tag" itemprop="keywords"><a href="$url$path/">$categories::name</a></span></p>
         </footer>
@@ -107,7 +107,7 @@
 <!-- DEBUG: $utils::debug -->
 
 <!-- blosxom back_and_forth_prev -->
-<a rel="prev" href="$back_and_forth::prev_url">
+<a href="$back_and_forth::prev_url" rel="prev">
   <p>$back_and_forth::prev_title</p>
 </a>
 
