--- a/src/html/index.mustache
+++ b/src/html/index.mustache
@@ -17,14 +17,14 @@
   <body>
     {{> global-header}}
 
-    <main role="main">
+    <main class="main" role="main">
       {{#articles}}
         <section id="latest-article" class="topic">
           {{#first}}
             <a href="{{link}}">
               <h1>{{{title}}}</h1>
 
-              <footer>
+              <footer class="section-footer">
                 <p>on <time datetime="{{html5PubDate}}">{{strPubDate}}</time>
                   under <span class="tag">{{category}}</span></p>
               </footer>
@@ -53,9 +53,9 @@
       {{/articles}}
 
       <section id="recent-updates" class="post-list">
-        <h1>お知らせ</h1>
+        <h1 class="section-heading">お知らせ</h1>
 
-        <footer>
+        <footer class="section-footer">
           <p>Updates other than weblog.</p>
         </footer>
 
@@ -70,17 +70,17 @@
       </section>
 
       <section id="subscribe-links">
-        <h1>購読</h1>
+        <h1 class="section-heading">購読</h1>
 
-        <footer>
+        <footer class="section-footer">
           <p>Follow this website.</p>
         </footer>
 
         <ul class="icon-list">
-          <li><a href="https://twitter.com/hail2unet"><img src="../../images/icon/twitter.min.svg" alt="Twitter"></a></li>
-          <li><a href="https://www.facebook.com/hail2u.net"><img src="../../images/icon/facebook.min.svg" alt="Facebook"></a></li>
-          <li><a href="http://u2liah.tumblr.com/"><img src="../../images/icon/tumblr.min.svg" alt="Tumblr"></a></li>
-          <li><a rel="alternate" type="application/rss+xml" href="/feed"><img src="../../images/icon/feed.min.svg" alt="Feed"></a></li>
+          <li><a href="https://twitter.com/hail2unet"><img alt="Twitter" src="../../images/icon/twitter.min.svg"></a></li>
+          <li><a href="https://www.facebook.com/hail2u.net"><img alt="Facebook" src="../../images/icon/facebook.min.svg"></a></li>
+          <li><a href="http://u2liah.tumblr.com/"><img alt="Tumblr" src="../../images/icon/tumblr.min.svg"></a></li>
+          <li><a href="/feed" rel="alternate" type="application/rss+xml"><img alt="Feed" src="../../images/icon/feed.min.svg"></a></li>
         </ul>
 
         <p>このウェブサイトの更新情報は、以上のソーシャル・ネットワークやRSSフィードで購読することが出来ます。お好きな方法でぜひ購読してみてください。</p>
