--- a/src/html/partial/global-footer.mustache
+++ b/src/html/partial/global-footer.mustache
@@ -1,11 +1,11 @@
-<footer role="contentinfo">
+<footer class="global-footer" role="contentinfo">
   <section class="footlinks">
     <ul>
-      <li><a rel="license" href="{{license_url}}">CC BY-NC</a></li>
-      <li><a rel="alternate" type="application/rss+xml" href="{{feed_url}}">RSS</a></li>
+      <li><a href="{{license_url}}" rel="license">CC BY-NC</a></li>
+      <li><a href="{{feed_url}}" rel="alternate" type="application/rss+xml">RSS</a></li>
     </ul>
   </section>
 
   {{#about}}<p class="byline">Made by <mark>Kyo Nagashima</mark>.</p>{{/about}}
-  {{^about}}<p id="author" class="byline" itemprop="author" itemscope itemtype="http://schema.org/Person">Made by <span itemprop="name"><a rel="author" href="/about/" itemprop="url">Kyo Nagashima</a></span>.</p>{{/about}}
+  {{^about}}<p id="author" class="byline" itemprop="author" itemscope itemtype="http://schema.org/Person">Made by <span itemprop="name"><a href="/about/" rel="author" itemprop="url">Kyo Nagashima</a></span>.</p>{{/about}}
 </footer>
