--- a/src/html/partial/google-adsense__ad-main.mustache
+++ b/src/html/partial/google-adsense__ad-main.mustache
@@ -3,8 +3,8 @@
   <ins class="adsbygoogle"
        style="display:block"
        data-ad-client="ca-pub-8712792805045949"
-       data-ad-slot="1723739447"
-       data-ad-format="rectangle, horizontal"></ins>
+       data-ad-format="rectangle, horizontal"
+       data-ad-slot="1723739447"></ins>
   <script>
     (adsbygoogle = window.adsbygoogle || []).push({});
   </script>
