--- a/src/html/partial/google-cse.mustache
+++ b/src/html/partial/google-cse.mustache
@@ -1,11 +1,10 @@
-<aside role="search">
+<aside class="subcontent" role="search">
   <!-- Google Custom Search Engine -->
   <form class="searchbox searchboxbygoogle" action="https://www.google.com/cse"{{#home}} itemprop="potentialAction" itemscope itemtype="http://schema.org/SearchAction"{{/home}}>
     {{#home}}<meta content="https://www.google.com/cse?cx=partner-pub-8712792805045949:3747342316&amp;ie=UTF-8&amp;q={q}&amp;sa=Search" itemprop="target">{{/home}}
-    <input type="hidden" name="cx" value="partner-pub-8712792805045949:3747342316">
-    <input type="hidden" name="ie" value="UTF-8">
-    {{#home}}<input type="search" name="q" size="32" itemprop="query-input">{{/home}}
-    {{^home}}<input type="search" name="q" size="32">{{/home}}
-    <input type="submit" name="sa" value="Search">
+    <input name="cx" type="hidden" value="partner-pub-8712792805045949:3747342316">
+    <input name="ie" type="hidden" value="UTF-8">
+    <input name="q" size="32" type="search"{{#home}} itemprop="query-input"{{/home}}>
+    <input name="sa" type="submit" value="Search">
   </form>
 </aside>
