--- a/src/html/partial/link.mustache
+++ b/src/html/partial/link.mustache
@@ -1,7 +1,7 @@
-<link rel="alternate" type="application/rss+xml" href="{{feed_url}}">
-<link rel="author" href="/about/">
-{{^notfound}}<link rel="canonical" href="{{canonical}}">{{/notfound}}
-<link rel="license" href="{{license_url}}">
+<link href="{{feed_url}}" rel="alternate" type="application/rss+xml">
+<link href="/about/" rel="author">
+{{^notfound}}<link href="{{canonical}}" rel="canonical">{{/notfound}}
+<link href="{{license_url}}" rel="license">
 
-<link rel="icon" type="image/x-icon" href="/favicon.ico">
-<link rel="apple-touch-icon" type="image/png" href="/apple-touch-icon.png">
+<link href="/favicon.ico" rel="icon" type="image/x-icon">
+<link href="/apple-touch-icon.png" rel="apple-touch-icon" type="image/png">
