--- a/src/html/search/index.mustache
+++ b/src/html/search/index.mustache
@@ -17,20 +17,20 @@
   <body>
     {{> global-header}}
 
-    <main role="main">
+    <main class="main" role="main">
       <section role="search">
-        <h1>このウェブサイト全体から検索する</h1>
+        <h1 class="section-heading">このウェブサイト全体から検索する</h1>
 
-        <footer>
+        <footer class="section-heafing">
           <p>Keep Calm and Search on</p>
         </footer>
 
         <!-- Google Custom Search Engine -->
         <form class="searchbox" action="http://www.google.com/cse">
-          <input type="hidden" name="cx" value="partner-pub-8712792805045949:3747342316">
-          <input type="hidden" name="ie" value="UTF-8">
-          <input type="search" name="q" size="32">
-          <input type="submit" name="sa" value="Search">
+          <input name="cx" type="hidden" value="partner-pub-8712792805045949:3747342316">
+          <input name="ie" type="hidden" value="UTF-8">
+          <input name="q" size="32" type="search">
+          <input name="sa" type="submit" value="Search">
         </form>
       </section>
 
