--- a/src/html/partial/global-header.mustache
+++ b/src/html/partial/global-header.mustache
@@ -1,11 +1,11 @@
-<header role="banner">
-  {{#home}}<h1><mark><img src="{{site_logo}}" alt="{{site_title}}"></mark></h1>{{/home}}
-  {{^home}}<h1><a href="/"><img src="{{site_logo}}" alt="{{site_title}}"></a></h1>{{/home}}
+<header class="global-header" role="banner">
+  {{#home}}<h1 class="logo"><mark><img alt="{{site_title}}" src="{{site_logo}}"></mark></h1>{{/home}}
+  {{^home}}<h1 class="logo"><a href="/"><img alt="{{site_title}}" src="{{site_logo}}"></a></h1>{{/home}}
 
   {{#weblog_child}}<?$permalink::is_permalink ne="1"><p class="tagline">{{{tagline}}}</p></?>{{/weblog_child}}
   {{^weblog_child}}<p class="tagline">{{{tagline}}}</p>{{/weblog_child}}
 
-  <nav>
+  <nav class="global-navigation">
     <ul>
       {{#weblog}}
         {{#weblog_child}}<li><a href="/blog/"><mark>Weblog</mark></a></li>{{/weblog_child}}
