--- a/src/html/partial/meta.mustache
+++ b/src/html/partial/meta.mustache
@@ -1,13 +1,13 @@
 <meta charset="UTF-8">
 {{#weblog}}
   {{#weblog_child}}
-    <?$permalink::is_permalink ne="1"><meta name="description" content="{{description}}"></?>
-    <?$permalink::is_permalink eq="1"><meta name="description" content="$permalink::description"></?>
-    <meta name="generator" content="blosxom v$version">
+    <?$permalink::is_permalink ne="1"><meta content="{{description}}" name="description"></?>
+    <?$permalink::is_permalink eq="1"><meta content="$permalink::description" name="description"></?>
+    <meta content="blosxom v$version" name="generator">
   {{/weblog_child}}
 
-  {{^weblog_child}}<meta name="description" content="{{description}}">{{/weblog_child}}
+  {{^weblog_child}}<meta content="{{description}}" name="description">{{/weblog_child}}
 {{/weblog}}
 
-{{^weblog}}<meta name="description" content="{{description}}">{{/weblog}}
-<meta name="viewport" content="width=device-width">
+{{^weblog}}<meta content="{{description}}" name="description">{{/weblog}}
+<meta content="width=device-width" name="viewport">
