--- a/src/html/partial/structured-data.mustache
+++ b/src/html/partial/structured-data.mustache
@@ -13,6 +13,6 @@
 <meta content="{{site_title}}" property="og:site_name">
 <meta content="100000022521341" prefix="fb: http://ogp.me/ns/fb#" property="fb:admins">
 
-<meta name="twitter:card" content="summary_large_image">
-<meta name="twitter:site" content="@hail2unet">
-<meta name="twitter:creator" content="@hail2u_">
+<meta content="summary_large_image" name="twitter:card">
+<meta content="@hail2unet" name="twitter:site">
+<meta content="@hail2u_" name="twitter:creator">
