--- a/src/html/projects/index.mustache
+++ b/src/html/projects/index.mustache
@@ -17,11 +17,11 @@
   <body>
     {{> global-header}}
 
-    <main role="main">
+    <main class="main" role="main">
       <section>
-        <h1><a href="https://github.com/hail2u/grunt-rsync-ac">rsync-ac (Gruntプラグイン)</a></h1>
+        <h1 class="section-heading"><a href="https://github.com/hail2u/grunt-rsync-ac">rsync-ac (Gruntプラグイン)</a></h1>
 
-        <footer>
+        <footer class="section-footer">
           <p>$ rsync -aC --exclude-from=.rsyncignore</p>
         </footer>
 
@@ -31,16 +31,16 @@
       {{> google-adsense__ad-main}}
 
       <section>
-        <h1><a href="https://github.com/hail2u/grunt-pubsubhubbub_publish">pubsubhubbub_publish (Gruntプラグイン)</a></h1>
+        <h1 class="section-heading"><a href="https://github.com/hail2u/grunt-pubsubhubbub_publish">pubsubhubbub_publish (Gruntプラグイン)</a></h1>
 
         <p>pubsubhubbub_publish (Gruntプラグイン)はGoogleが提供している<a href="https://pubsubhubbub.appspot.com/">PubSubHubbubハブ</a>へ指定したURLのフィードを<code>publish</code>するGruntプラグインです。</p>
       </section>
 
       <section>
-        <h1><a href="http://picks.hail2u.net/">Picks</a></h1>
+        <h1 class="section-heading"><a href="http://picks.hail2u.net/">Picks</a></h1>
 
         <figure>
-          <a href="http://picks.hail2u.net/"><img src="/images/projects/picks.png" alt="Picks"></a>
+          <a href="http://picks.hail2u.net/"><img alt="Picks" src="/images/projects/picks.png"></a>
 
           <figcaption>興味の変遷をURLで辿る</figcaption>
         </figure>
@@ -49,46 +49,46 @@
       </section>
 
       <section>
-        <h1><a href="https://github.com/hail2u/unutm">UnUTM</a></h1>
+        <h1 class="section-heading"><a href="https://github.com/hail2u/unutm">UnUTM</a></h1>
 
         <p>UnUTMはウェブページのURLからGoogle Analyticsなどで利用されているUrchin Traffic Monitor (UTM)用のパラメーターを自動的に削除し、URLの分散を解消するJavaScriptライブラリです。</p>
       </section>
 
       <section>
-        <h1><a href="https://github.com/hail2u/node-csswring">CSSWring</a></h1>
+        <h1 class="section-heading"><a href="https://github.com/hail2u/node-csswring">CSSWring</a></h1>
 
         <p>CSSWringはCSSを圧縮(minification)するNode.jsパッケージです。Node.jsパッケージとして組み込むだけでなく、コマンドラインからも実行できます。</p>
       </section>
 
       <section>
-        <h1><a href="https://github.com/hail2u/node-css-mqpacker">CSS MQPacker</a></h1>
+        <h1 class="section-heading"><a href="https://github.com/hail2u/node-css-mqpacker">CSS MQPacker</a></h1>
 
         <p>CSS MQPackerはCSSファイル内に散在するメディアクエリを、クエリごとにまとめCSSファイルを最適化するNode.jsパッケージです。これを利用した<a href="https://github.com/hail2u/grunt-css-mqpacker">Gruntプラグイン</a>もあります。</p>
       </section>
 
       <section>
-        <h1><a href="https://github.com/hail2u/grunt-long-url">Long URL (Gruntプラグイン)</a></h1>
+        <h1 class="section-heading"><a href="https://github.com/hail2u/grunt-long-url">Long URL (Gruntプラグイン)</a></h1>
 
         <p>Long URL (Gruntプラグイン)はCSSファイルに含まれるURLの長さを調べ、2000文字以上のURLが見つかった場合に警告するGruntプラグインです。</p>
       </section>
 
       <section>
-        <h1><a href="https://github.com/hail2u/node-pit-ro">Pit RO</a></h1>
+        <h1 class="section-heading"><a href="https://github.com/hail2u/node-pit-ro">Pit RO</a></h1>
 
         <p>Pit ROは<a href="https://github.com/cho45/pit">Pit</a>のデータファイルをNode.jsで手軽に読み込めるようにするNodeパッケージです。</p>
       </section>
 
       <section>
-        <h1><a href="https://github.com/hail2u/grunt-selector4096">Selector4096 (Gruntプラグイン)</a></h1>
+        <h1 class="section-heading"><a href="https://github.com/hail2u/grunt-selector4096">Selector4096 (Gruntプラグイン)</a></h1>
 
         <p>Selector4096 (Gruntプラグイン)はCSSファイルに含まれるセレクターの数を調べ、4096個以上あった場合に警告するGruntプラグインです。</p>
       </section>
 
       <section>
-        <h1><a href="http://hail2u.github.io/google-fonts.html">G.F.</a></h1>
+        <h1 class="section-heading"><a href="http://hail2u.github.io/google-fonts.html">G.F.</a></h1>
 
         <figure>
-          <a href="http://hail2u.github.io/google-fonts.html"><img src="/images/projects/google-fonts.png" alt="Courgete"></a>
+          <a href="http://hail2u.github.io/google-fonts.html"><img alt="Courgete" src="/images/projects/google-fonts.png"></a>
 
           <figcaption>これが<a href="http://www.google.com/fonts/specimen/Courgette">Courgete</a>だ！</figcaption>
         </figure>
@@ -97,16 +97,16 @@
       </section>
 
       <section>
-        <h1><a href="https://github.com/hail2u/detect-font-loading">Detect Font Loading</a></h1>
+        <h1 class="section-heading"><a href="https://github.com/hail2u/detect-font-loading">Detect Font Loading</a></h1>
 
         <p>Detect Font Loadingはフォントの読み込みの完了を検知し、<code>html</code>要素にクラス名を追加するJavaScriptライブラリです。主にChromeやSafari等でWebフォントの読み込みが完了するまでコンテンツが表示されない現象への対策に利用することを想定しています。</p>
       </section>
 
       <section>
-        <h1><a href="https://github.com/hail2u/roremu-ipusamu">ロレム・イプサム</a></h1>
+        <h1 class="section-heading"><a href="https://github.com/hail2u/roremu-ipusamu">ロレム・イプサム</a></h1>
 
         <figure>
-          <a href="https://github.com/hail2u/roremu-ipusamu"><img src="/images/projects/roremu-ipusamu.png" alt="日本のideographを求めて"></a>
+          <a href="https://github.com/hail2u/roremu-ipusamu"><img alt="日本のideographを求めて" src="/images/projects/roremu-ipusamu.png"></a>
 
           <figcaption>CC0な英数字交じりのダミー文書が欲しい。</figcaption>
         </figure>
@@ -115,10 +115,10 @@
       </section>
 
       <section>
-        <h1><a href="http://hail2u.github.io/sixty-four.html">Sixty-Four</a></h1>
+        <h1 class="section-heading"><a href="http://hail2u.github.io/sixty-four.html">Sixty-Four</a></h1>
 
         <figure>
-          <a href="http://hail2u.github.io/sixty-four.html"><img src="/images/projects/sixty-four.png" alt="Sixty-Four"></a>
+          <a href="http://hail2u.github.io/sixty-four.html"><img alt="Sixty-Four" src="/images/projects/sixty-four.png"></a>
 
           <figcaption>CSS濃い目、JavaScript薄め、ウェブ・タイポグラフィーが隠し味。</figcaption>
         </figure>
@@ -127,10 +127,10 @@
       </section>
 
       <section>
-        <h1><a href="http://hail2u.github.io/drawic/">Drawic</a></h1>
+        <h1 class="section-heading"><a href="http://hail2u.github.io/drawic/">Drawic</a></h1>
 
         <figure>
-          <a href="http://hail2u.github.io/drawic/"><img src="/images/projects/drawic.png" alt="SVGなのでどのようなサイズでもディテールを壊さずスムーズに拡大・縮小されている"></a>
+          <a href="http://hail2u.github.io/drawic/"><img alt="SVGなのでどのようなサイズでもディテールを壊さずスムーズに拡大・縮小されている" src="/images/projects/drawic.png"></a>
           <figcaption>Scalable! Vector!! Graphics!!!</figcaption>
         </figure>
 
@@ -138,10 +138,10 @@
       </section>
 
       <section>
-        <h1><a href="http://hail2u.github.io/q4tjt.html">Quote for the Japanese Typography</a></h1>
+        <h1 class="section-heading"><a href="http://hail2u.github.io/q4tjt.html">Quote for the Japanese Typography</a></h1>
 
         <figure>
-          <a href="http://hail2u.github.io/q4tjt.html"><img src="/images/projects/q4tjt.png" alt="Japanese"></a>
+          <a href="http://hail2u.github.io/q4tjt.html"><img alt="Japanese" src="/images/projects/q4tjt.png"></a>
           <figcaption>ニポンゴムズカシネ</figcaption>
         </figure>
 
@@ -149,22 +149,22 @@
       </section>
 
       <section>
-        <h1><a href="https://github.com/hail2u/normalize.scss">Normalize.scss</a></h1>
+        <h1 class="section-heading"><a href="https://github.com/hail2u/normalize.scss">Normalize.scss</a></h1>
 
         <p>Normalize.scssは<a href="http://necolas.github.com/normalize.css/">Normalize.css</a>を<a href="http://sass-lang.com/">Sass</a>で扱いやすいようにルールごとに切り分けてモジュラー化したSCSSライブラリです。</p>
       </section>
 
       <section>
-        <h1><a href="https://github.com/hail2u/google-code-prettify-language-handlers">Missing Language Handlers for Google Code Prettify</a></h1>
+        <h1 class="section-heading"><a href="https://github.com/hail2u/google-code-prettify-language-handlers">Missing Language Handlers for Google Code Prettify</a></h1>
 
         <p>Missing Language Handlers for Google Code Prettifyは<a href="http://code.google.com/p/google-code-prettify/">Google Code Prettify</a>が対応していない言語のためのハンドラー・ファイルを提供します。</p>
       </section>
 
       <section>
-        <h1><a href="https://github.com/hail2u/scss-column-equation">SCSS Column Equation</a></h1>
+        <h1 class="section-heading"><a href="https://github.com/hail2u/scss-column-equation">SCSS Column Equation</a></h1>
 
         <figure>
-          <a href="https://github.com/hail2u/scss-column-equation"><img src="/images/projects/scss-column-eqation.png" alt="| | | |"></a>
+          <a href="https://github.com/hail2u/scss-column-equation"><img alt="| | | |" src="/images/projects/scss-column-eqation.png"></a>
 
           <figcaption>Rapid Prototyping with Sass</figcaption>
         </figure>
@@ -173,10 +173,10 @@
       </section>
 
       <section>
-        <h1><a href="http://hail2u.github.io/hougan.html">Hougan</a></h1>
+        <h1 class="section-heading"><a href="http://hail2u.github.io/hougan.html">Hougan</a></h1>
 
         <figure>
-          <a href="http://hail2u.github.io/hougan.html"><img src="/images/projects/hougan.png" alt="田"></a>
+          <a href="http://hail2u.github.io/hougan.html"><img alt="田" src="/images/projects/hougan.png"></a>
 
           <figcaption>Sectional Paper Pattern</figcaption>
         </figure>
@@ -185,22 +185,22 @@
       </section>
 
       <section>
-        <h1><a href="https://github.com/hail2u/scss-partials">SCSS Partials</a></h1>
+        <h1 class="section-heading"><a href="https://github.com/hail2u/scss-partials">SCSS Partials</a></h1>
 
         <p>SCSS Partialsはよく使うclearfixや画像置換などのミックスインや有名なCSSライブラリをSassから簡単に扱えるようにSCSSライブラリとしてまとめたものです。</p>
       </section>
 
       <section>
-        <h1><a href="https://github.com/hail2u/vim-css3-syntax">vim-css3-syntax</a></h1>
+        <h1 class="section-heading"><a href="https://github.com/hail2u/vim-css3-syntax">vim-css3-syntax</a></h1>
 
         <p>vim-css3-syntaxは<a href="http://www.vim.org">Vim</a>のビルトイン・ランタイムに含まれるCSSのシンタックス・ファイルを拡張する形でCSS3の様々なプロパティーや機能に対応させるVimシンタックス・ファイルです。</p>
       </section>
 
       <section>
-        <h1><a href="https://github.com/hail2u/h2u_colorscheme">H2U Colorscheme</a></h1>
+        <h1 class="section-heading"><a href="https://github.com/hail2u/h2u_colorscheme">H2U Colorscheme</a></h1>
 
         <figure>
-          <a href="https://github.com/hail2u/h2u_colorscheme"><img src="/images/projects/h2u_colorscheme.png" alt="WindowsのgVimで同じコードをこの3種類のカラースキームで表示するとこのようになる"></a>
+          <a href="https://github.com/hail2u/h2u_colorscheme"><img alt="WindowsのgVimで同じコードをこの3種類のカラースキームで表示するとこのようになる" src="/images/projects/h2u_colorscheme.png"></a>
           <figcaption>Dark, White, &amp; Black.</figcaption>
         </figure>
 
@@ -208,10 +208,10 @@
       </section>
 
       <section>
-        <h1><a href="http://iine.hail2u.net/">Iine!</a></h1>
+        <h1 class="section-heading"><a href="http://iine.hail2u.net/">Iine!</a></h1>
 
         <figure>
-          <a href="http://iine.hail2u.net/"><img src="/images/projects/iine.png" alt="Iine!"></a>
+          <a href="http://iine.hail2u.net/"><img alt="Iine!" src="/images/projects/iine.png"></a>
 
           <figcaption>My Inspiration Deposit</figcaption>
         </figure>
@@ -220,10 +220,10 @@
       </section>
 
       <section>
-        <h1><a href="http://hail2u.github.io/minA/">MinA</a></h1>
+        <h1 class="section-heading"><a href="http://hail2u.github.io/minA/">MinA</a></h1>
 
         <figure>
-          <a href="http://hail2u.github.io/minA/"><img src="/images/projects/mina.png" alt="Minimal Amazon Logo"></a>
+          <a href="http://hail2u.github.io/minA/"><img alt="Minimal Amazon Logo" src="/images/projects/mina.png"></a>
           <figcaption>Frustration-Free Searching</figcaption>
         </figure>
 
@@ -231,10 +231,10 @@
       </section>
 
       <section>
-        <h1><a href="http://hail2u.github.io/jquery.harmonize-text/">Harmonize Text (jQueryプラグイン)</a></h1>
+        <h1 class="section-heading"><a href="http://hail2u.github.io/jquery.harmonize-text/">Harmonize Text (jQueryプラグイン)</a></h1>
 
         <figure>
-          <a href="http://hail2u.github.io/jquery.harmonize-text/"><img src="/images/projects/harmonize-text.png" alt="Harmonize Text"></a>
+          <a href="http://hail2u.github.io/jquery.harmonize-text/"><img alt="Harmonize Text" src="/images/projects/harmonize-text.png"></a>
           <figcaption>Responsive Typography?</figcaption>
         </figure>
 
@@ -242,22 +242,22 @@
       </section>
 
       <section>
-        <h1><a href="https://github.com/hail2u/jquery.highlight-search-terms">Highlight Search Terms (jQueryプラグイン)</a></h1>
+        <h1 class="section-heading"><a href="https://github.com/hail2u/jquery.highlight-search-terms">Highlight Search Terms (jQueryプラグイン)</a></h1>
 
         <p>Highlight Search Termsは<a href="http://www.google.com/">Google</a>や<a href="http://www.yahoo.com">Yahoo!</a>、<a href="http://bing.com/">Bing</a>等の検索エンジンからアクセスした訪問者へリファラーに含まれるキーワードをハイライトしてあげるjQueryプラグインです。</p>
       </section>
 
       <section>
-        <h1><a href="http://hail2u.github.io/google-webfonts-preview.html">Google Web Fonts Preview</a></h1>
+        <h1 class="section-heading"><a href="http://hail2u.github.io/google-webfonts-preview.html">Google Web Fonts Preview</a></h1>
 
         <p>Google Web Fonts Previewは任意の文字列とCSSで<a href="http://www.google.com/fonts">Google Web Fonts</a>で公開されているフォントをプレビューするWebツールです。</p>
       </section>
 
       <section>
-        <h1><a href="http://hail2u.github.io/140-colors-found.html">140 Colors Found</a></h1>
+        <h1 class="section-heading"><a href="http://hail2u.github.io/140-colors-found.html">140 Colors Found</a></h1>
 
         <figure>
-          <a href="http://hail2u.github.io/140-colors-found.html"><img src="/images/projects/140-colors-found.png" alt="Plumと指定するとこのようにプラム色がプレビューされる"></a>
+          <a href="http://hail2u.github.io/140-colors-found.html"><img alt="Plumと指定するとこのようにプラム色がプレビューされる" src="/images/projects/140-colors-found.png"></a>
           <figcaption>Color Keywords Are Well Considered</figcaption>
         </figure>
 
@@ -265,28 +265,28 @@
       </section>
 
       <section>
-        <h1><a href="http://hail2u.github.io/better-smart-keywords.html">Better Smart Keywords</a></h1>
+        <h1 class="section-heading"><a href="http://hail2u.github.io/better-smart-keywords.html">Better Smart Keywords</a></h1>
 
         <p>Better Smart Keywordsはブラウザーについているプリフィックス型のスマートキーワード(ロケーションバーから直接検索する機能)より、サフィックス型の方が検索エンジンを切り替えやすく便利なのではないかという考えの元に作成したWebページ検索のフロントエンドです。</p>
       </section>
 
       <section>
-        <h1><a href="http://hail2u.github.io/css-color-keywords.html">CSS Color Keywords</a></h1>
+        <h1 class="section-heading"><a href="http://hail2u.github.io/css-color-keywords.html">CSS Color Keywords</a></h1>
 
         <p>CSS Color KeywordsはCSSで利用できる140種類の色キーワードを全てプレビューするWebページです。</p>
       </section>
 
       <section>
-        <h1><a href="https://github.com/hail2u/jquery.test-font">Test Font (jQueryプラグイン)</a></h1>
+        <h1 class="section-heading"><a href="https://github.com/hail2u/jquery.test-font">Test Font (jQueryプラグイン)</a></h1>
 
         <p>Test Fontは指定したフォントがインストールされているかどうかを簡単にチェックすることができるjQueryプラグインです。</p>
       </section>
 
       <section>
-        <h1><a href="http://hail2u.github.io/google-webfonts-ampersands.html">&amp;</a></h1>
+        <h1 class="section-heading"><a href="http://hail2u.github.io/google-webfonts-ampersands.html">&amp;</a></h1>
 
         <figure>
-          <a href="http://hail2u.github.io/google-webfonts-ampersands.html"><img src="/images/projects/ampersand.png" alt="&amp;"></a>
+          <a href="http://hail2u.github.io/google-webfonts-ampersands.html"><img alt="&amp;" src="/images/projects/ampersand.png"></a>
           <figcaption>I Love &amp;!</figcaption>
         </figure>
 
@@ -294,31 +294,31 @@
       </section>
 
       <section>
-        <h1><a href="http://hail2u.github.io/asamashi09/">Asamashi09</a></h1>
+        <h1 class="section-heading"><a href="http://hail2u.github.io/asamashi09/">Asamashi09</a></h1>
 
         <p>Asamashi09はJavaScriptのみで動作する<a href="http://affiliate.amazon.co.jp/?_encoding=UTF8&amp;camp=247&amp;creative=1211&amp;linkCode=ur2&amp;tag=hail2unet-22">Amazonアソシエイト</a>のフロントエンド・ツールです。</p>
       </section>
 
       <section>
-        <h1><a href="https://github.com/hail2u/jquery.query-yql">Query YQL (jQueryプラグイン)</a></h1>
+        <h1 class="section-heading"><a href="https://github.com/hail2u/jquery.query-yql">Query YQL (jQueryプラグイン)</a></h1>
 
         <p>Query YQLは<a href="http://developer.yahoo.com/yql/">YQL</a>への複雑なクエリーを<a href="http://api.jquery.com/jQuery.getJSON/"><code>jQuery.getJSON()</code></a>のようにシンプルに記述できるようにするjQueryプラグインです。</p>
       </section>
 
       <section>
-        <h1><a href="https://github.com/hail2u/jquery.table-filter">Table Filter (jQueryプラグイン)</a></h1>
+        <h1 class="section-heading"><a href="https://github.com/hail2u/jquery.table-filter">Table Filter (jQueryプラグイン)</a></h1>
 
         <p>Table FilterはHTMLの表にインクリメンタル検索で絞り込める入力フォームを追加するjQueryプラグインです。</p>
       </section>
 
       <section>
-        <h1><a href="https://github.com/hail2u/jquery.xhashchange">xHashchange (jQueryプラグイン)</a></h1>
+        <h1 class="section-heading"><a href="https://github.com/hail2u/jquery.xhashchange">xHashchange (jQueryプラグイン)</a></h1>
 
         <p>xHashchangeは<code>hashchange</code>イベントをサポートしていない古いブラウザーへのみ同じインターフェイスの似たイベントを追加するjQueryプラグインです。</p>
       </section>
 
       <section>
-        <h1>その他</h1>
+        <h1 class="section-heading">その他</h1>
 
         <ul>
           <li><a href="http://hail2u.github.io/at-font-face-test.html">@font-face Test</a></li>
