--- a/src/html/partial/global-header.mustache
+++ b/src/html/partial/global-header.mustache
@@ -5,7 +5,7 @@
   {{#weblog_child}}<?$permalink::is_permalink ne="1"><p class="tagline">{{{tagline}}}</p></?>{{/weblog_child}}
   {{^weblog_child}}<p class="tagline">{{{tagline}}}</p>{{/weblog_child}}
 
-  <nav class="global-navigation">
+  <nav class="site-navigation">
     <ul>
       {{#weblog}}
         {{#weblog_child}}<li><a href="/blog/"><mark>Weblog</mark></a></li>{{/weblog_child}}
