Remove `code` inside heading element

--- a/src/html/documents/index.mustache
+++ b/src/html/documents/index.mustache
@@ -71,7 +71,7 @@
       </section>
 
       <section>
-        <h1 class="section-heading"><a href="/documents/html-img-alt.html">HTMLにおける<code>img</code>要素の<code>alt</code>属性</a></h1>
+        <h1 class="section-heading"><a href="/documents/html-img-alt.html">HTMLにおけるimg要素のalt属性</a></h1>
 
         <p><a href="http://www.whatwg.org/specs/web-apps/current-work/multipage/">HTML Standard</a>の<code>img</code>要素の<code>alt</code>属性についてのガイドである<a href="http://www.whatwg.org/specs/web-apps/current-work/multipage/embedded-content-1.html#alt">4.8.1.1 Requirements for providing text to act as an alternative for images</a>をざっと把握できるように日本語で箇条書きにしたものです。これで全容をアバウトに把握してから原文を読むとより理解しやすくなると思います。</p>
       </section>
