Remove permalink specified style

--- a/src/html/blog/theme.mustache
+++ b/src/html/blog/theme.mustache
@@ -48,7 +48,7 @@
     {{> script}}
   </head>
 
-  <body<?$permalink::is_permalink eq="1"> class="permalink"</?>>
+  <body>
     {{> global-header}}
 
     <main class="main" <?$permalink::is_permalink ne="1"> role="main"</?>>
