--- a/src/html/about/index.mustache
+++ b/src/html/about/index.mustache
@@ -101,6 +101,7 @@
           <li><a href="http://gruntjs.com/">Grunt</a></li>
           <li><a href="http://handlebarsjs.com/">Handlebars.js</a></li>
           <li><a href="http://inkscape.org/">Inkscape</a></li>
+          <li><a href="http://jpegclub.org/jpegtran/">jpegtran</a></li>
           <li><a href="http://daringfireball.net/projects/markdown/">Markdown</a></li>
           <li><a href="http://optipng.sourceforge.net/">OptiPNG</a></li>
           <li><a href="http://www.adobe.com/products/photoshop/">Photoshop</a></li>
