Fix section footer class

--- a/src/html/documents/index.mustache
+++ b/src/html/documents/index.mustache
@@ -33,7 +33,7 @@
       <section>
         <h1 class="section-heading"><a href="/documents/sass-guide-ja.html">Sassの基本</a></h1>
 
-        <footer>
+        <footer class="section-footer">
           <p>Sass; Syntactically Awesome Style Sheets.</p>
         </footer>
 
