--- a/src/html/partial/google-cse.mustache
+++ b/src/html/partial/google-cse.mustache
@@ -4,7 +4,7 @@
     {{#home}}<meta content="https://www.google.com/cse?cx=partner-pub-8712792805045949:3747342316&amp;ie=UTF-8&amp;q={q}&amp;sa=Search" itemprop="target">{{/home}}
     <input name="cx" type="hidden" value="partner-pub-8712792805045949:3747342316">
     <input name="ie" type="hidden" value="UTF-8">
-    <input name="q" size="32" type="search"{{#home}} itemprop="query-input"{{/home}}>
-    <input name="sa" type="submit" value="Search">
+    <input class="query" name="q" size="32" type="search"{{#home}} itemprop="query-input"{{/home}}>
+    <input class="button" name="sa" type="submit" value="Search">
   </form>
 </aside>
