Use Japanese for section heading

--- a/src/html/blog/index.mustache
+++ b/src/html/blog/index.mustache
@@ -46,7 +46,7 @@
       {{#articles}}
         {{#isFirstInYear}}
           <section id="on-{{year}}" class="post-list">
-            <h1 class="section-heading">Articles on {{year}}</h1>
+            <h1 class="section-heading">{{year}}年の記事</h1>
 
             <footer class="section-footer">
               <p>What I was thinking on {{year}}.</p>
