Add `section-footer` to only 1st section

--- a/src/html/about/index.mustache
+++ b/src/html/about/index.mustache
@@ -22,7 +22,7 @@
         <h1 class="section-heading">このウェブサイトについて</h1>
 
         <footer class="section-footer">
-          <p>Informations, for humans.</p>
+          <p>Informations, for humans</p>
         </footer>
 
         <p>Hail2u.netは、ドメインの取得こそ2003年くらいですが、そこそこ息の長いウェブサイトで、20世紀からあります。いわゆるウェブログと呼ばれるような記録を、ウェブサイトの制作周りの話題を中心に書いています。日本最後の<a href="http://blosxom.sourceforge.net/">Blosxom</a>を利用したウェブサイトの座が目標ですが、挫折しそうです。</p>
@@ -58,10 +58,6 @@
 
         <h1 class="section-heading"><span itemprop="name">Kyo Nagashima</span>について</h1>
 
-        <footer class="section-footer">
-          <p>Who.</p>
-        </footer>
-
         <figure>
           <img alt="This Is the End" src="http://www.gravatar.com/avatar/38b5f9f7d2faa315ec10866e18fc3bd7.png?s=320" itemprop="image">
         </figure>
@@ -84,10 +80,6 @@
 
       <section id="colophon">
         <h1 class="section-heading">奥付け</h1>
-
-        <footer class="section-footer">
-          <p>Tools and technologies used on this website.</p>
-        </footer>
 
         <p>その他、ウェブページの構成やツール、プライバシーについては以下を参照してください。</p>
 
@@ -136,10 +128,6 @@
 
       <section id="contact">
         <h1 class="section-heading">問い合わせ</h1>
-
-        <footer class="section-footer">
-          <p>Yo.</p>
-        </footer>
 
         <p>このWebサイト内のコンテンツについて、報告や問い合わせ・クレーム等がある場合は以下のいずれかの手段で連絡してください。</p>
 
