--- a/src/html/blog/index.mustache
+++ b/src/html/blog/index.mustache
@@ -22,7 +22,7 @@
         <h1 class="section-heading">カテゴリ別</h1>
 
         <footer class="section-footer">
-          <p>Organized by categories.</p>
+          <p>Organized by categories</p>
         </footer>
 
         <ul class="flat-ul">
@@ -47,10 +47,6 @@
         {{#isFirstInYear}}
           <section id="on-{{year}}" class="post-list">
             <h1 class="section-heading">{{year}}年の記事</h1>
-
-            <footer class="section-footer">
-              <p>What I was thinking on {{year}}.</p>
-            </footer>
 
             <ol>
         {{/isFirstInYear}}
