--- a/src/html/blog/theme.mustache
+++ b/src/html/blog/theme.mustache
@@ -57,7 +57,7 @@
           <h1 class="section-heading">“$categories::title”についての記事</h1>
 
           <footer class="section-footer">
-            <p>What I wrote about “$categories::title”.</p>
+            <p>What I wrote about “$categories::title”</p>
           </footer>
 
           <ol>
