Add ImageMagick and Node.js

--- a/src/html/about/index.mustache
+++ b/src/html/about/index.mustache
@@ -86,15 +86,17 @@
         <h2>製作に使っているツール</h2>
 
         <ul class="flat-ul">
-          <li><a href="http://blosxom.sourceforge.net">Blosxom</a></li>
+          <li><a href="http://blosxom.sourceforge.net/">Blosxom</a></li>
           <li><a href="https://github.com/hail2u/node-css-mqpacker">CSS MQPacker</a></li>
           <li><a href="https://github.com/hail2u/node-csswring">CSSWring</a></li>
           <li><a href="http://git-scm.com/">Git</a></li>
           <li><a href="http://gruntjs.com/">Grunt</a></li>
           <li><a href="http://handlebarsjs.com/">Handlebars.js</a></li>
+          <li><a href="http://www.imagemagick.org/">ImageMagick</a></li>
           <li><a href="http://inkscape.org/">Inkscape</a></li>
           <li><a href="http://jpegclub.org/jpegtran/">jpegtran</a></li>
           <li><a href="http://daringfireball.net/projects/markdown/">Markdown</a></li>
+          <li><a href="http://nodejs.org/">Node.js</a></li>
           <li><a href="http://optipng.sourceforge.net/">OptiPNG</a></li>
           <li><a href="http://www.adobe.com/products/photoshop/">Photoshop</a></li>
           <li><a href="http://pngquant.org/">pngquant</a></li>
